@@ -167,7 +167,6 @@
 (straight-use-package 'adaptive-wrap)
 (straight-use-package 'visual-fill-column)
 (straight-use-package 'logos)
-(straight-use-package 'puni)
 
 ;;; Extra major modes
 (straight-use-package 'yaml-mode)
